# mag-net-hub

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
src_py/mag_net_hub/: __init__.py  loss.py  paderborn.py  sydney.py
src_py/mag_net_hub/models/paderborn/: changelog.md  cnn_3C90_experiment_1b4d8_model_f3915868_seed_0_fold_0.pt  cnn_3C92_experiment_ea1fe_model_72510647_seed_0_fold_0.pt  cnn_3F4_experiment_c234d_model_2d43b97d_seed_0_fold_0.pt  cnn_77_experiment_268ae_model_5b7c92ed_seed_0_fold_0.pt  cnn_ML95S_experiment_1c978_model_883a5d2f_seed_0_fold_0.pt  cnn_N49_experiment_27442_model_d6234a32_seed_0_fold_0.pt  cnn_N87_experiment_985cb_model_d51b0f7e_seed_0_fold_0.pt  cnn_T37_experiment_a084a_model_fb31325e_seed_0_fold_0.pt
src_py/magnethub/: __init__.py  loss.py  paderborn.py  sydney.py
src_py/magnethub/models/paderborn/: cnn_3C94_experiment_56441_model_55693612_seed_0_fold_0.pt  cnn_3C95_experiment_ad6ec_model_046383a5_seed_0_fold_0.pt  cnn_3E6_experiment_a7817_model_a1035e58_seed_0_fold_0.pt  cnn_78_experiment_e5297_model_77fbd758_seed_0_fold_0.pt  cnn_79_experiment_45989_model_7227af72_seed_0_fold_0.pt  cnn_N27_experiment_8b7f0_model_20954a2a_seed_0_fold_0.pt  cnn_N30_experiment_5a78c_model_6bd86623_seed_0_fold_0.pt
src_py/magnethub/models/sydney/: 3C90.pt  3C92.pt  3C94.pt  3C95.pt  3E6.pt  3F4.pt  77.pt  78.pt  79.pt  ML95S.pt  N27.pt  N30.pt  N49.pt  N87.pt  T37.pt
tests/: debug.py  test_paderborn.py  test_sydney.py
tests/test_files/: unit_test_data_ploss_at_450kWpm3.csv
